--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,22 @@ before_install:
     - conda config --set always_yes yes
 
 install:
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+        wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+        wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+    # Useful for debugging any issues with conda
+    - conda info -a
     - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy matplotlib pytables numba nbconvert ipykernel
     - source activate test-environment
-    - python -V
     - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install pathlib ; fi
-    - python setup.py build
-    - pip install .
-    - rm -rf build/
+    - python setup.py install
 
 before_script:
     - cd notebooks
