--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
     - conda info -a
 
 install:
-    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy matplotlib pytables numba nbconvert ipykernel
+    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy matplotlib pytables numba nbconvert ipykernel
     - source activate test-environment
     - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install pathlib ; fi
     - python setup.py install
