--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,11 @@ before_script:
     - wget https://ndownloader.figshare.com/files/3350669 -O dsdna_d7d17_50_50_1.spc
     #- wget https://ndownloader.figshare.com/files/3350672 -O Pre.ht3
     #- wget https://ndownloader.figshare.com/files/3350663 -O 0023uLRpitc_NTP_20dT_0.5GndCl.sm
-    - 'echo "import tables; print(tables.__version__)" > test.py'
+
 script:
     - python -V
-    - python test.py
+    - python print_versions.py
+    - python Convert_ns-ALEX_Becker-Hickl_files_to_Photon-HDF5.py
     - python $TRAVIS_BUILD_DIR/tests/nbrun.py
 
 sudo: false
