Tests: deactivate virtualenv

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ python:
     - "3.5"
 
 before_install:
+    - echo $PATH
+    - which deactivate
+    - deactivate
+    - echo $PATH
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
       else
@@ -18,6 +22,7 @@ before_install:
     - conda update -q conda
     # Useful for debugging any issues with conda
     - conda info -a
+    - echo $PATH
 
 install:
     - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy matplotlib pytables numba nbconvert ipykernel
